--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body,
 html {
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 nav a {
@@ -82,15 +83,15 @@ nav a img {
   opacity: 1;
 }
 
-.swiper {
+#terlaris .swiper {
   width: 100%;
   height: 100%;
 }
 
-.swiper-slide {
+#terlaris .swiper-slide {
   text-align: center;
-  font-size: 18px;
-  background: #fff;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -103,11 +104,28 @@ nav a img {
   align-items: center;
 }
 
-.swiper-slide img {
+#terlaris .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+#terlaris .swiper-slide:hover {
+  margin-top: -5px;
+}
+
+#langkah img {
+  width: 100%;
+}
+
+#footer img {
+  width: 100%;
+}
+
+#footer a {
+  text-decoration: none;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
