--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,7 @@ body,
 html {
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 // Navbar
@@ -85,35 +86,57 @@ nav {
 // Kategori End
 
 // Terlaris
-.swiper {
-  width: 100%;
-  height: 100%;
-}
+#terlaris {
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  .swiper-slide {
+    text-align: center;
+    transition: 0.3s;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .swiper-slide:hover {
+    margin-top: -5px;
+  }
 }
 // Terlaris End
+
+// Langkah
+#langkah {
+  img {
+    width: 100%;
+  }
+}
+// Langkah End
+
+// Footer
+#footer {
+  img {
+    width: 100%;
+  }
+  a {
+    text-decoration: none;
+    color: #fff;
+  }
+}
+// Footer End
