--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@ html {
   font-family: 'Poppins', sans-serif;
 }
 
+:root {
+  --primary: #dc3545;
+  --second: #ffc107;
+}
+
 nav a {
   height: 40px;
 }
@@ -14,22 +19,48 @@ nav a img {
   width: 100%;
 }
 
-#hero {
-  background-image: url("../img/hero/brown-hens-farm-min.jpg");
+#hero #hero1 {
+  background-image: url("../img/hero/1.jpg");
+}
+
+#hero #hero2 {
+  background-image: url("../img/hero/2.jpg");
+}
+
+#hero #hero3 {
+  background-image: url("../img/hero/3.jpg");
+}
+
+#hero #hero1,
+#hero #hero2,
+#hero #hero3 {
   background-size: cover;
   -webkit-backdrop-filter: brightness(0.3);
   backdrop-filter: brightness(0.1);
   background-position: center;
 }
 
-#hero .pembungkus-hero {
+#hero #hero1 .pembungkus-hero,
+#hero #hero2 .pembungkus-hero,
+#hero #hero3 .pembungkus-hero {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-backdrop-filter: brightness(0.1);
   backdrop-filter: brightness(0.5);
 }
 
-#hero .pembungkus-hero img {
-  height: 100%;
+#hero .swiper {
   width: 100%;
+  height: 100%;
+}
+
+#hero .swiper-pagination-bullet {
+  background-color: var(--second);
 }
 
 #memilih .card-body {
@@ -92,7 +123,7 @@ nav a img {
   height: 100%;
 }
 
-#terlaris .swiper-slide {
+#terlaris .swiper .swiper-slide {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   /* Center slide text vertically */
@@ -107,7 +138,7 @@ nav a img {
   align-items: center;
 }
 
-#terlaris .swiper-slide img {
+#terlaris .swiper .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
