--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,11 @@ html {
   font-family: 'Poppins', sans-serif;
 }
 
+:root {
+  --primary: #dc3545;
+  --second: #ffc107;
+}
+
 // Navbar
 nav {
   a {
@@ -20,18 +25,36 @@ nav {
 
 // Hero
 #hero {
-  background-image: url('../img/hero/brown-hens-farm-min.jpg');
-  background-size: cover;
-  -webkit-backdrop-filter: brightness(0.3);
-  backdrop-filter: brightness(0.1);
-  background-position: center;
-  .pembungkus-hero {
-    -webkit-backdrop-filter: brightness(0.1);
-    backdrop-filter: brightness(0.5);
-    img {
-      height: 100%;
-      width: 100%;
+  #hero1 {
+    background-image: url('../img/hero/1.jpg');
+  }
+  #hero2 {
+    background-image: url('../img/hero/2.jpg');
+  }
+  #hero3 {
+    background-image: url('../img/hero/3.jpg');
+  }
+  #hero1,
+  #hero2,
+  #hero3 {
+    background-size: cover;
+    -webkit-backdrop-filter: brightness(0.3);
+    backdrop-filter: brightness(0.1);
+    background-position: center;
+    .pembungkus-hero {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      -webkit-backdrop-filter: brightness(0.1);
+      backdrop-filter: brightness(0.5);
     }
+  }
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+  .swiper-pagination-bullet {
+    background-color: var(--second);
   }
 }
 // Hero End
@@ -92,30 +115,30 @@ nav {
   .swiper {
     width: 100%;
     height: 100%;
-  }
-
-  .swiper-slide {
-    transition: 0.3s;
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+    .swiper-slide {
+      transition: 0.3s;
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
+
   .swiper-slide:hover {
     margin-top: -5px;
   }
