--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -244,4 +244,19 @@ nav {
       }
     }
   }
+
+  #kategori {
+    .pembungkus-kategori {
+      .card-kategori {
+        p {
+          font-size: 10px;
+        }
+        h5,
+        a {
+          font-size: 12px;
+          padding: 5px 15px !important;
+        }
+      }
+    }
+  }
 }
