--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ nav a img {
   width: 100%;
 }
 
+nav .active {
+  color: var(--second) !important;
+}
+
 #hero #hero1,
 #hero #hero2,
 #hero #hero3 {
@@ -152,12 +156,92 @@ nav a img {
   color: #fff;
 }
 
+#kategori-page ul li button {
+  color: #000;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#kategori-page ul li button:hover {
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+#kategori-page ul li .active {
+  margin-top: -10px;
+  background-color: var(--primary) !important;
+  color: #fff;
+}
+
+#kategori-page .card-ayam {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+#kategori-page .card-ayam:hover {
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+#detail-page .inline-group {
+  max-width: 12rem;
+}
+
+#detail-page .form-control[type='number']::-webkit-inner-spin-button,
+#detail-page .form-control[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+#keranjang-page .inline-group {
+  max-width: 12rem;
+}
+
+#keranjang-page .form-control[type='number']::-webkit-inner-spin-button,
+#keranjang-page .form-control[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.modal.right .modal-dialog {
+  position: fixed;
+  right: 0;
+  margin: auto;
+  width: 320px;
+  height: 100%;
+  -webkit-transform: translate3d(0%, 0, 0);
+  transform: translate3d(0%, 0, 0);
+}
+
+.modal.right .modal-content {
+  height: 100%;
+  overflow-y: auto;
+}
+
+.modal.right .modal-body {
+  padding: 15px 15px 80px;
+}
+
+.modal.right .modal-body .inline-group {
+  max-width: 12rem;
+}
+
+.modal.right .modal-body .form-control[type='number']::-webkit-inner-spin-button,
+.modal.right .modal-body .form-control[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 @media screen and (max-width: 991px) {
-  #memilih .pembungkus-memilih {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: auto auto;
-        grid-template-columns: auto auto;
+  #memilih .pembungkus-memilih .card-gratis,
+  #memilih .pembungkus-memilih .card-halal,
+  #memilih .pembungkus-memilih .card-aman {
+    width: 50%;
+  }
+  #memilih .pembungkus-memilih .card-gratis img,
+  #memilih .pembungkus-memilih .card-halal img,
+  #memilih .pembungkus-memilih .card-aman img {
+    width: 70% !important;
   }
   #kategori .pembungkus-kategori {
     display: -ms-grid;
@@ -188,6 +272,56 @@ nav a img {
   #footer .logo-footer img {
     width: 50%;
   }
+  #kategori-page ul {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+  }
+  #kategori-page ul li button .card-body h5 {
+    font-size: 12px;
+  }
+  #kategori-page ul li .active {
+    margin-top: 0px;
+  }
+  #kategori-page .pembungkus-card-ayam {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+  }
+  #kategori-page .pembungkus-card-ayam h5 {
+    font-size: 12px;
+  }
+  #kategori-page .pembungkus-card-ayam p,
+  #kategori-page .pembungkus-card-ayam a {
+    font-size: 10px;
+  }
+  #detail-page h2 {
+    font-size: 16px;
+  }
+  #detail-page h3 {
+    font-size: 15px;
+  }
+  #detail-page h5 {
+    font-size: 12px;
+  }
+  #detail-page p,
+  #detail-page a,
+  #detail-page button,
+  #detail-page .form-control {
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #detail-page {
+    padding: 0 !important;
+  }
+  #detail-page img {
+    width: 50%;
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 450px) {
@@ -204,6 +338,9 @@ nav a img {
   #kategori .pembungkus-kategori .card-kategori a {
     font-size: 12px;
     padding: 5px 15px !important;
+  }
+  #detail-page img {
+    width: 70%;
   }
 }
 /*# sourceMappingURL=style.css.map */
