--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -385,8 +385,8 @@ nav {
   }
 
   #form-step {
-    .img-form {
-      display: none;
+    .input-col {
+      padding: 10px !important;
     }
   }
 }
